Initial Commit for the fusion Grid wrapper

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,12 @@
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
     "declaration": false,
+    "paths": {
+      "fusion-grid": [
+        "dist/fusion-grid/fusion-grid",
+        "dist/fusion-grid"
+      ]
+    },
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
