--- a/projects/fusion-grid/package.json
+++ b/projects/fusion-grid/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fusion-grid",
-  "version": "0.0.1",
+  "name": "angular-fusiongrid",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^11.2.14",
     "@angular/core": "^11.2.14"
